# vit-imagenet-train

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  build_and_run2.sh  build_and_runeth.sh  download_cifar.py  load_data.cpp  resnet.json  resneteth.json  train_model.cpp
